--- a/package.json
+++ b/package.json
@@ -33,7 +33,7 @@
   },
   "devDependencies": {
     "@adonisjs/assembler": "^7.8.2",
-    "@adonisjs/eslint-config": "^2.0.0-beta.6",
+    "@adonisjs/eslint-config": "^2.0.0",
     "@adonisjs/prettier-config": "^1.4.0",
     "@adonisjs/tsconfig": "^1.4.0",
     "@japa/api-client": "^2.0.4",
@@ -42,23 +42,23 @@
     "@japa/runner": "^3.1.4",
     "@swc/core": "1.10.1",
     "@types/luxon": "^3.4.2",
-    "@types/node": "^22.10.2",
-    "eslint": "^9.17.0",
+    "@types/node": "^22.13.4",
+    "eslint": "^9.20.1",
     "hot-hook": "^0.4.0",
     "pino-pretty": "^13.0.0",
-    "prettier": "^3.4.2",
+    "prettier": "^3.5.1",
     "ts-node-maintained": "^10.9.4",
     "typescript": "~5.7"
   },
   "dependencies": {
     "@adonisjs/auth": "^9.3.1",
-    "@adonisjs/core": "^6.17.0",
+    "@adonisjs/core": "^6.17.2",
     "@adonisjs/cors": "^2.2.1",
     "@adonisjs/lucid": "^21.5.1",
     "@vinejs/vine": "^3.0.0",
     "adonis-lucid-soft-deletes": "^2.1.0",
     "luxon": "^3.5.0",
-    "pg": "^8.13.1",
+    "pg": "^8.13.3",
     "reflect-metadata": "^0.2.2"
   },
   "hotHook": {
